# linette

./: .gitignore  README.md  pyproject.toml  setup.py
linette/: linette.py  random_tensor.py  version.py
tests/: test_random_tensor.py
