[tool.poetry]
name = "linette"
version = "0.1.0"
description = "Basic library for handling linear networks of Gaussian Random Tensors"
authors = ["Tim Evans <teva022.te@gmail.comi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.2"
pydantic = "^2.5.2"
scipy = "^1.11.4"
tncontract = {git = "https://github.com/andrewdarmawan/tncontract.git"}


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
pylint = "^3.0.2"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
